crates/capsec/tests/compile_fail/sealed_permission_no_external_impl.rs
/// The Permission trait requires a seal token — external crates cannot
/// implement it without the `#[capsec::permission]` derive macro.
use capsec::prelude::*;

struct MyPerm;
impl Permission for MyPerm {}

fn main() {}
