crates/capsec/tests/compile_fail/sealed_permission_no_external_impl.stderr
error[E0046]: not all trait items implemented, missing: `__CapsecSeal`
 --> tests/compile_fail/sealed_permission_no_external_impl.rs:6:1
  |
6 | impl Permission for MyPerm {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `__CapsecSeal` in implementation
  |
  = help: implement the missing item: `type __CapsecSeal = /* Type */;`
